# synaptic

./: .gitignore  README.md  pyproject.toml  start.sh
synaptic_bridge/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
synaptic_bridge/.github/workflows/: ci.yml
synaptic_bridge/application/: __init__.py
synaptic_bridge/application/commands/: __init__.py
synaptic_bridge/application/dtos/: __init__.py
synaptic_bridge/application/orchestration/: __init__.py
synaptic_bridge/application/queries/: __init__.py
synaptic_bridge/domain/: __init__.py
synaptic_bridge/domain/entities/: __init__.py  cognitive_state.py  correction.py  device.py  execution_session.py  neural_signal.py  policy.py  session.py  tool_call.py  tool_manifest.py  user.py
synaptic_bridge/domain/events/: __init__.py
synaptic_bridge/domain/ports/: __init__.py
synaptic_bridge/domain/value_objects/: __init__.py  classification_result.py  device_command.py  device_status.py  signal_channel.py  signal_sample.py  user_preferences.py
synaptic_bridge/infrastructure/: __init__.py
synaptic_bridge/infrastructure/adapters/: __init__.py  drift_detector.py  duckdb_store.py  intent_classifier.py  opa_engine.py  siem_connectors.py  spiffe_controller.py  worm_audit.py
synaptic_bridge/infrastructure/config/: __init__.py
synaptic_bridge/infrastructure/mcp_servers/: __init__.py  claude_code.py
synaptic_bridge/infrastructure/repositories/: __init__.py
synaptic_bridge/infrastructure/services/: __init__.py  call_graph.py  circuit_breaker.py  metrics.py  pattern_marketplace.py  rate_limiter.py
synaptic_bridge/presentation/api/: main.py  partner_api.py
synaptic_bridge/presentation/cli/: main.py
synaptic_bridge/presentation/portal/: index.html  routes.py
synaptic_bridge/presentation/portal/static/: app.js  styles.css
synaptic_bridge/tests/domain/: test_additional.py  test_entities.py
synaptic_bridge/tests/integration/: test_api.py
tests/: conftest.py
tests/application/: test_cle_integration.py  test_commands.py
tests/domain/: test_additional.py  test_domain_extras.py  test_entities.py
tests/infrastructure/: test_adapters.py  test_engines.py
tests/integration/: test_api.py
